--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,7 @@ county_pop_data.RData
 mw_data2.RData
 mw_data.RData
 nhgis_data
-process_nhgis_data.R
-process_qcew_income_data.R
+process_*.R
 qcew_income_data
 setup_data.R
 sim_data.RDS
